src/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: count-collection-system
  labels:
    name: count-collection-system
